K8s/prod/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meteo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 32000
          - path: /places
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 32093
          - path: /meteo
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 32093
          - path: /feedbacks
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 32093
          - path: /cities
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 32093
